<resources>
    <string name="app_name">Simply Fit</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="workout_name_hint">Enter the name of your workout </string>
    <string name="workout_location_hint">Enter the location of your workout</string>
    <string name="workout_start_hint">Enter the start time (HH:MM)</string>
    <string name="workout_end_hint">Enter the end time (HH:MM)</string>
    <string name="add_workout_button">Add Workout</string>
    <string name="workout_date_hint">Enter the day of the month</string>

    <string name="exercise_name_hint">Enter name</string>
    <string name="exercise_hours_hint">Enter Hours</string>
    <string name="exercise_minutes_hint">Enter Minutes</string>
    <string name="hours">hours</string>
    <string name="duration">Duration</string>
    <string name="minutes">minutes</string>
    <string name="exercise_name">Name of Exercise</string>
    <string name="add_exercise_button">Add Exercise</string>


    <string name="title_activity_sign_in">SIGN IN</string>
    <string name="userid">Enter your user ID</string>
    <string name="password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="add_user_register">Register</string>
    <string name="LOGIN_PREFS"> edu.uw.tacoma.shmurphy.webservicelab.PREFS</string>
    <string name="LOGGEDIN">logged in</string>
    <string name="action_logout">Logout</string>
    <string name="LOGIN_FILE"> edu.uw.tacoma.mmuppa.webservicelab.LOGIN_FILE</string>

    <string-array name="exercises_array">
        <item>Aerobics</item>
        <item>Strength</item>
        <item>Flexibility</item>
    </string-array>

    <string name="start_time_dialog">Pick a Start Time</string>
    <string name="end_time_dialog">Pick an End Time</string>

    <string name="year">Enter year</string>
    <string name="month">Enter month</string>
    <string name="choosedate">Go To Date</string>
    <string name="launch_custom_dialog">Choose a date and year</string>

    <string name="cancel">Cancel</string>

</resources>
