<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_fragment"
    tools:context="shmurphy.tacoma.uw.edu.simplyfitter.authenticate.LoginFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userid_edittext"
        android:hint="@string/userid"
        android:inputType="text"
        android:layout_gravity="top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="top"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/sign_in"
        android:background="@color/teal"
        android:layout_gravity="bottom|left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="New User?"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:text="@string/register"
        android:background="@color/teal"
        android:layout_gravity="bottom|center"/>


</LinearLayout>
