<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/register_fragment"
    tools:context="shmurphy.tacoma.uw.edu.simplyfitter.authenticate.RegisterFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_userid_edittext"
        android:hint="@string/userid"
        android:inputType="text"
        android:layout_gravity="top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_password_edittext"
        android:hint="@string/password"
        android:inputType="text"
        android:layout_gravity="top"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_user_button"
        android:text="@string/add_user_register"
        android:background="@color/colorPrimary"
        android:layout_gravity="bottom|center"/>

</LinearLayout>
